syntax = "proto3";
package article;
option go_package = "./;proto";

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

service Articles{
  rpc CreateArticle(CreateArticleRequest) returns(Article){
    option (google.api.http) = {
      post: "/articles"
      body: "*"
    };
  }

  rpc GetArticle(GetArticleRequest) returns(Article){
    option (google.api.http) = {
      get: "/articles/{slug}"
    };
  }

  rpc UpdateArticle(UpdateArticleRequest) returns(Article){
    option (google.api.http) = {
      put: "/articles/{slug}"
      body:"*"
    };
  }

  rpc DeleteArticle(DeleteArticleRequest) returns(Empty){
    option (google.api.http) = {
      delete: "/articles/{slug}"
    };
  }

  rpc CreateComment(CreateCommentRequest) returns(Comment){
    option (google.api.http) = {
      post: "/articles/{slug}/comments"
      body: "*"
    };
  }
  rpc GetComments(GetCommentsRequest) returns(CommentsResponse){
    option (google.api.http) = {
      get: "/articles/{slug}/comments"
    };
  }

  rpc DeleteComment(DeleteCommentRequest) returns(Empty){
    option (google.api.http) = {
      get: "/articles/{slug}/comments/{id}"
    };
  }

}

message Comment{
  string id = 1;
  string body = 2;
}

message Article {
  string slug = 1;
  string title = 2;
  string description = 3;
  string body = 4;
  repeated string tagList = 5;
  bool favorited = 6;
  int32 favoritesCount = 7;
}

message CreateArticleRequest {
  string title = 1;
  string description = 2;
  string body = 3;
  repeated string tagList = 4;
}

message CreateCommentRequest {
  string slug = 1;
  string body = 2;
}

message GetArticleRequest {
  string slug = 1;
}

message UpdateArticleRequest{
  string title = 1;
  string description = 2;
  string body = 3;
  string slug = 4;
}

message DeleteArticleRequest{
  string slug = 1;
}

message GetCommentsRequest{
  string slug = 1;
}

message CommentsResponse{
  repeated Comment comments = 1;
}

message DeleteCommentRequest{
  string slug = 1;
  string id = 2;
}

message Empty{}
